# myskills

./: .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  SPEC.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: mcp-sidecar-probe.yml  release.yml  stable-manifest.yml  tauri-preview.yml
docs/: mcp.md
docs/ci/: tauri-preview.github-actions.yml
docs/design/: agent-mcp-surface.md  skill-optimization.md  uiux-audit-2026-06.md
docs/qa/: tauri-parity-smoke.md  tauri-stable-migration.md
electron/: build-preload.mjs  dev.ts  main.ts  paths.ts  preload.ts  tsconfig.json
electron/ai/: bulk-categorize.ts  categorize.ts  library-briefing.ts  library-overview.ts
electron/catalog/: enrich.ts  install.ts  skillssh.ts
electron/db/: index.ts  migrations.ts  schema.ts  seed.ts
electron/ipc/: ai.ts  catalog.ts  coverage.ts  dispatcher.ts  index.ts  llm.ts  platforms.ts  scan.ts  scenarios.ts  settings.ts  skills.ts  sync.ts
electron/llm/: anthropic.ts  openai-compatible.ts  provider.ts
electron/scanner/: index.ts  parser.ts  platforms.ts
electron/secrets/: electron-safe-storage.ts  network-gate.ts  safe-storage.ts
electron/sync/: backup-cleanup.ts  backup.ts  symlink.ts
scripts/: audit-tauri-commands.mjs  build-mcp-sidecar.mjs  create-tauri-smoke-fixtures.mjs  notarize-tauri-macos.mjs  notarize.cjs  smoke-tauri-dmg.mjs  smoke-tauri-launch.mjs  smoke-ui-onboarding.mjs  smoke-ui-workbench.mjs  test-tauri-updater-manifest.mjs  write-tauri-updater-manifest.mjs
shared/: ipc-channels.ts  known-platforms.ts  slug.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.signing.conf.json  tauri.sidecar.conf.json  tauri.stable.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  mcp.rs  migration.rs  paths.rs  secret_vault.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/scanner/: mod.rs  parser.rs
src/app/: layout.tsx  page.tsx
src/app/coverage/: page.tsx
src/app/history/: page.tsx
src/app/scenarios/: page.tsx
src/app/settings/: page.tsx
src/components/: bulk-categorize-dialog.tsx  coverage-view.tsx  discover-view.tsx  history-view.tsx  kanban-view.tsx  lang-toggle.tsx  library-map-view.tsx  library-overview-guidance.tsx  onboarding.tsx  platform-badge.tsx  scenario-form.tsx  scenario-recommendations.tsx  scenarios-view.tsx  settings-view.tsx  sidebar.tsx  skill-card.tsx  skill-detail.tsx  skill-diagnosis.tsx  skill-list.tsx  skill-optimize.tsx  skill-translate.tsx  sync-confirm.tsx
src/components/create-skill/: create-skill-view.tsx
src/components/ui/: badge.tsx  button.tsx  confirm-dialog.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  scroll-area.tsx  separator.tsx  toast.tsx
src/lib/: api.ts  i18n.tsx  line-diff.ts  status-tones.ts  sync-apply.ts  utils.ts
src/lib/locales/: en.ts  zh.ts
src/styles/: globals.css
