[package]
name = "myskills"
version = "0.2.5"
description = "AI Skill Hub"
authors = ["tangmilk1205@gmail.com"]
edition = "2021"

[lib]
name = "myskills_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
dirs = "5"
hex = "0.4"
rand = "0.8"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
# Cross-platform "move to OS trash/recycle bin" for the delete-skill feature.
trash = "5"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
yaml-rust2 = "0.8"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
